--- a/journal/201907.md
+++ b/journal/201907.md
@@ -168,7 +168,7 @@ Ditto's July achievements:
 * Strategized with the community on how to best build visibility for the Decred tagline.
 * Secured four interviews, and will share more details when published.
 * Secured an article in financial advisory newsletter, Legacy Research, as a result of an interview we hosted with @moo31337.
-* Secured a 10-minute segment on [BlockTV](https://blocktv.com/watch/2019-07-30/5d404e65ea3f5-decred-s-jake-yocom-piatt-talks-decentralized-governance) with @jy-p discussing his take on Libra and how Decred's progress towards becoming a DAO.
+* Secured a 10-minute segment on [BlockTV](https://blocktv.com/watch/2019-07-30/5d404e65ea3f5-decred-s-jake-yocom-piatt-talks-decentralized-governance) with @jy-p discussing his take on Libra and Decred's progress towards becoming a DAO.
 * Secured publication of @jy-p's byline on Libra in [CCN](https://www.ccn.com/news/libra-friend-or-foe/2019/07/21/).
 * Worked with the community to amplify/engage with the [#DEX tweet storm](https://twitter.com/decredproject/status/1156652694502817793) announcing Decred's DEX spec.
 * Began a messaging refresh, adding FAQs to counter common misunderstandings.
