--- a/journal/201908.md
+++ b/journal/201908.md
@@ -90,13 +90,8 @@ Dev activity stats for August: 244 active PRs, 274 master commits, 45750K added 
 
 ## People
 
-Welcome to new first time contributors with code merged to master: {list people who made meaningful commits merged in master branches, ordered by repo importance, format as: username ([repo](link to user's commits))}
+Welcome to new first time contributors with code merged to master: aarcamp ([dcrd](https://github.com/decred/dcrd/commits?author=aarcamp)), skipcheru ([dcrandroid](https://github.com/decred/dcrandroid/commits?author=skipcheru)), RyanBRiley ([politeia](https://github.com/decred/politeia/commits?author=RyanBRiley)), UferePease ([dcrstakepool](https://github.com/decred/dcrstakepool/commits?author=UferePease)), fguisso ([lightning-faucet](https://github.com/decred/lightning-faucet/commits?author=fguisso))
 
-Congratulations to {n} contributors listed on [decred.org](https://decred.org/contributors/):
-
-* {name, sort names alphabetically} ({nickname}, {title})
-
-{welcome new individual and company contractors listed on decred.org}
 
 {updates from existing contractors}
 
