Add dev summaries for dcrwallet, decrediton, dcrweb

--- a/journal/201908.md
+++ b/journal/201908.md
@@ -42,7 +42,65 @@ Typo fixes, improved error messages and other code cleanup {SB: mention new cont
 
 [dcrwallet](https://github.com/decred/dcrwallet): {}
 
+Code cleanup, bug fixes, new and updated error messages, 
+
+Work has begun to add [support](https://github.com/decred/dcrwallet/pull/1541) for creating CoinJoin transactions for purchasing split transactions in ticketbuying, as well as mixing of individual mix change outputs into smaller standard denominations.
+
+
+The new blockchain/standalone module in dcrd has been [integrated](https://github.com/decred/dcrwallet/pull/1527). A new [RPC](https://github.com/decred/dcrwallet/pull/1522) has been added that allows the user to abandon (or remove) an unconfirmed transaction from the wallet, and any other transactions dependent on its outputs.
+
+A function has been added to export the [extended private key](https://github.com/decred/dcrwallet/pull/1533) of an account after unlocking the wallet.
+
+A direct dependency on the secp256k1 package was [removed](https://github.com/decred/dcrwallet/pull/1528). A bolt release adds support for [RISC-V](https://github.com/decred/dcrwallet/pull/1529).
+
+Lots of cleanup, including updating [error messages](https://github.com/decred/dcrwallet/pull/1539) to take advantage the error package in Go 1.13, [removing](https://github.com/decred/dcrwallet/pull/1531) old unused dcrd modules.
+
+
 [Decrediton](https://github.com/decred/decrediton): {}
+
+UI tweaks, bug fixes, code cleanup. 
+
+Dark mode has been [completed](https://github.com/decred/decrediton/pull/2163). Work continues on making the UI responsive, with four new responsive views were [added](https://github.com/decred/decrediton/pull/2174).
+
+Closed:
+
+Responsive views: Onboarding slides
+https://github.com/decred/decrediton/pull/2176
+(responsive design bug fix/tweak)
+
+Remove deprecated code 
+https://github.com/decred/decrediton/pull/2175
+(cleanup)
+
+Responsive views: svp, privacy, language, release notes
+https://github.com/decred/decrediton/pull/2174
+(4 views now responsive)
+
+Upgrade lint 
+https://github.com/decred/decrediton/pull/2173
+fixes linter errors
+
+Enable access to logs page during initial sync
+https://github.com/decred/decrediton/pull/2170
+fixes bug: Certain stages of the initial sync aren't allowing access to the logs page (for example: the "Fetching Block Header" stage during SPV sync).
+
+Update constitution modal with new copy 
+https://github.com/decred/decrediton/pull/2168
+
+fix ticket numeric input showing error at wrong place 
+https://github.com/decred/decrediton/pull/2164
+UI bug fix
+
+UI dark color scheme implementation 
+https://github.com/decred/decrediton/pull/2163
+Finishes dark mode. Master issue: https://github.com/decred/decrediton/issues/2089
+
+
+Open:
+
+[security] Show owned address info 
+https://github.com/decred/decrediton/pull/2184
+This shows the derivation info for ddresses owned by the wallet. This is useful for debugging purposes.
 
 [Politeia](https://github.com/decred/politeia):
 
@@ -82,6 +140,33 @@ A new page detailing [atomic swaps](https://github.com/decred/dcrdocs/pull/968),
 
 [decred.org](https://github.com/decred/dcrweb): {}
 
+Roadmap has been [updated](https://github.com/decred/dcrweb/pull/695) with new developments, the [press coverage page](https://github.com/decred/dcrweb/pull/706) was updated with recent coverage, and privacy has been [added](https://github.com/decred/dcrweb/pull/712) to the homepage and roadmap. 
+
+Closed: 
+
+Update apps.yml
+https://github.com/decred/dcrweb/pull/714
+Update download page for Exodus to one which shows both desktop/mobile wallets.
+
+Privacy update
+https://github.com/decred/dcrweb/pull/712
+Roadmap: Initial Privacy Release completed
+Roadmap: Decrediton and VSP privacy integration added
+Homepage news banner updated with privacy announcement
+
+Press coverage page update
+https://github.com/decred/dcrweb/pull/706
+Added a few recent links to coverage page.
+
+Added Evercoin to exchanges page
+https://github.com/decred/dcrweb/pull/704
+
+Roadmap Update August 2019 
+https://github.com/decred/dcrweb/pull/695
+	•	Add DEX Development
+	•	Move Block Header Commitments to in-progress
+	•	Move Android Wallet to completed
+	•	Move user created DAOs to new
 Other:
 
 * {smaller items go here}
