Removing link to personal devdocs repo
We don't want to link to the WIP repo, as it's messy and still likely contains some outside content we're using as a temporary template.

--- a/journal/201908.md
+++ b/journal/201908.md
@@ -136,7 +136,7 @@ Work is being done to implement the new mobile mockups which will bring the app 
 
 [docs](https://github.com/decred/dcrdocs): {}
 
-A new page detailing [atomic swaps](https://github.com/decred/dcrdocs/pull/968), [updated](https://github.com/decred/dcrdocs/pull/979) hardware wallet support info {SB: not sure this is DJ worthy}, minor cleanups. Work has started on a long asked for separate developer documentation site. Initial work is occurring in this [private repo](https://github.com/jholdstock/dcrdevdocs) and will be merged into the main Decred GitHub org when published. 
+A new page detailing [atomic swaps](https://github.com/decred/dcrdocs/pull/968), [updated](https://github.com/decred/dcrdocs/pull/979) hardware wallet support info {SB: not sure this is DJ worthy}, minor cleanups. Work has started on a long asked for separate developer documentation site. Initial work is occurring in a personal repo that will be merged into the main Decred GitHub org when the site is launched. 
 
 [decred.org](https://github.com/decred/dcrweb): {}
 
