Dev/dcrd: add candidate stories

--- a/journal/201908.md
+++ b/journal/201908.md
@@ -25,11 +25,15 @@ The gradual process of upgrading Go modules continues with new versions of [`blo
 
 { looks like main module was reached, does this mark the end of the module upgrading saga? if yes, any comments about the whole process (e.g. what does it allow to do)? }
 
-`gcs` module received a number of [improvements](https://github.com/decred/dcrd/pulls?q=is%3Apr+is%3Aclosed+updated%3A2019-08-01..2019-08-31+gcs) to bring it to the quality level required by consensus code for ultimate inclusion in [header commitments](https://proposals.decred.org/proposals/0a1ff846ec271184ea4e3a921a3ccd8d478f69948b984445ee1852f272d54c58). Support has been [added](https://github.com/decred/dcrd/pull/1854) for independent false positive rate and Golomb coding bin size. Among other things, this permits more optimal parameters for minimizing the filter size to be specified. This capability will be used in the upcoming version 2 filters that will ultimately be included in header commitments. Start of the v2 dev cycle also marked the start of a [new approach](https://github.com/decred/dcrd/pull/1843) towards handling module versioning between release cycles to reduce the maintenance burden.
+`gcs` module received multiple [improvements](https://github.com/decred/dcrd/pulls?q=is%3Apr+is%3Aclosed+updated%3A2019-08-01..2019-08-31+gcs) to bring it to the quality level required by consensus code for ultimate inclusion in [header commitments](https://proposals.decred.org/proposals/0a1ff846ec271184ea4e3a921a3ccd8d478f69948b984445ee1852f272d54c58). Support has been [added](https://github.com/decred/dcrd/pull/1854) for independent false positive rate and Golomb coding bin size. Among other things, this permits more optimal parameters for minimizing the filter size to be specified. This capability will be used in the upcoming version 2 filters that will ultimately be included in header commitments. Start of the v2 dev cycle also marked the start of a [new approach](https://github.com/decred/dcrd/pull/1843) towards handling module versioning between release cycles to reduce the maintenance burden.
 
 The Blake256 implementation has been [copied](https://github.com/decred/dcrd/pull/1811) into dcrd repository so that dcrd does not have that external dependency anymore. While the optimizations required by dcrd were [accepted](https://github.com/dchest/blake256/pull/3) upstream, it is still [desirable](https://github.com/decred/dcrd/issues/1810) to have consensus critical code under tight control of dcrd maintainers.
 
 Test coverage was increased and hardened in multiple areas of the codebase.
+
+{ is address discovery notable? what's the user benefit? https://github.com/decred/dcrd/pull/1522 }
+
+Work [started](https://github.com/decred/dcrd/pull/1829) to maximize block template fees based on transaction chains in the mempool.
 
 [dcrwallet](https://github.com/decred/dcrwallet): {}
 
