--- a/journal/201908.md
+++ b/journal/201908.md
@@ -35,21 +35,13 @@ Test coverage was increased and hardened in multiple areas of the codebase.
 
 Work [started](https://github.com/decred/dcrd/pull/1829) to maximize block template fees based on transaction chains in the mempool.
 
-[dcrwallet](https://github.com/decred/dcrwallet): {}
+[dcrwallet](https://github.com/decred/dcrwallet):
 
-Code cleanup, bug fixes, new and updated error messages, 
+A new [RPC](https://github.com/decred/dcrwallet/pull/1522) has been added that allows the user to abandon (or remove) an unconfirmed transaction from the wallet, and any other transactions dependent on its outputs. Another new RPC allows to export the [extended private key](https://github.com/decred/dcrwallet/pull/1533) of an account after unlocking the wallet.
+
+Code maintenance: upgraded to use the new modules in dcrd and [removed](https://github.com/decred/dcrwallet/pull/1531) usages of old modules, [improved](https://github.com/decred/dcrwallet/pull/1539) compatibility with Go 1.13 errors.
 
 Work has begun to add [support](https://github.com/decred/dcrwallet/pull/1541) for creating CoinJoin transactions for purchasing split transactions in ticketbuying, as well as mixing of individual mix change outputs into smaller standard denominations.
-
-
-The new blockchain/standalone module in dcrd has been [integrated](https://github.com/decred/dcrwallet/pull/1527). A new [RPC](https://github.com/decred/dcrwallet/pull/1522) has been added that allows the user to abandon (or remove) an unconfirmed transaction from the wallet, and any other transactions dependent on its outputs.
-
-A function has been added to export the [extended private key](https://github.com/decred/dcrwallet/pull/1533) of an account after unlocking the wallet.
-
-A direct dependency on the secp256k1 package was [removed](https://github.com/decred/dcrwallet/pull/1528). A bolt release adds support for [RISC-V](https://github.com/decred/dcrwallet/pull/1529).
-
-Lots of cleanup, including updating [error messages](https://github.com/decred/dcrwallet/pull/1539) to take advantage the error package in Go 1.13, [removing](https://github.com/decred/dcrwallet/pull/1531) old unused dcrd modules.
-
 
 [Decrediton](https://github.com/decred/decrediton): {}
 
