--- a/journal/201908.md
+++ b/journal/201908.md
@@ -43,51 +43,9 @@ Code maintenance: upgraded to use the new modules in dcrd and [removed](https://
 
 Work has begun to add [support](https://github.com/decred/dcrwallet/pull/1541) for creating CoinJoin transactions for purchasing split transactions in ticketbuying, as well as mixing of individual mix change outputs into smaller standard denominations.
 
-[Decrediton](https://github.com/decred/decrediton): {}
+[Decrediton](https://github.com/decred/decrediton): UI tweaks, bug fixes, code cleanup. 
 
-UI tweaks, bug fixes, code cleanup. 
-
-Dark mode has been [completed](https://github.com/decred/decrediton/pull/2163). Work continues on making the UI responsive, with four new responsive views were [added](https://github.com/decred/decrediton/pull/2174).
-
-Closed:
-
-Responsive views: Onboarding slides
-https://github.com/decred/decrediton/pull/2176
-(responsive design bug fix/tweak)
-
-Remove deprecated code 
-https://github.com/decred/decrediton/pull/2175
-(cleanup)
-
-Responsive views: svp, privacy, language, release notes
-https://github.com/decred/decrediton/pull/2174
-(4 views now responsive)
-
-Upgrade lint 
-https://github.com/decred/decrediton/pull/2173
-fixes linter errors
-
-Enable access to logs page during initial sync
-https://github.com/decred/decrediton/pull/2170
-fixes bug: Certain stages of the initial sync aren't allowing access to the logs page (for example: the "Fetching Block Header" stage during SPV sync).
-
-Update constitution modal with new copy 
-https://github.com/decred/decrediton/pull/2168
-
-fix ticket numeric input showing error at wrong place 
-https://github.com/decred/decrediton/pull/2164
-UI bug fix
-
-UI dark color scheme implementation 
-https://github.com/decred/decrediton/pull/2163
-Finishes dark mode. Master issue: https://github.com/decred/decrediton/issues/2089
-
-
-Open:
-
-[security] Show owned address info 
-https://github.com/decred/decrediton/pull/2184
-This shows the derivation info for ddresses owned by the wallet. This is useful for debugging purposes.
+Initial [dark mode](https://github.com/decred/decrediton/issues/2089) has been [completed](https://github.com/decred/decrediton/pull/2163). Work continues on making the UI responsive, with four new responsive views were [added](https://github.com/decred/decrediton/pull/2174).
 
 [Politeia](https://github.com/decred/politeia):
 
