--- a/journal/201908.md
+++ b/journal/201908.md
@@ -49,11 +49,11 @@ Initial [dark mode](https://github.com/decred/decrediton/issues/2089) has been [
 
 [Politeia](https://github.com/decred/politeia):
 
-Work on the Politeia redesign is proceeding at pace, with a [number](https://github.com/decred/politeiagui/pull/1356) [of](https://github.com/decred/politeiagui/pull/1338) [PRs](https://github.com/decred/politeiagui/pull/1360) merged that add existing functionality to the redesigned interface. On the back-end, significant work laying the foundations for the [DCC process](https://proposals.decred.org/proposals/fa38a3593d9a3f6cb2478a24c25114f5097c572f6dadf24c78bb521ed10992a4), to be incorporated in the CMS, has been [merged](https://github.com/decred/politeia/pull/980).
+Work on the Politeia redesign is proceeding at pace, with a [number](https://github.com/decred/politeiagui/pull/1356) [of](https://github.com/decred/politeiagui/pull/1338) [PRs](https://github.com/decred/politeiagui/pull/1360) merged that add existing functionality to the redesigned interface. On the backend, significant work laying the foundations for the [DCC process](https://proposals.decred.org/proposals/fa38a3593d9a3f6cb2478a24c25114f5097c572f6dadf24c78bb521ed10992a4), to be incorporated in the CMS, has been [merged](https://github.com/decred/politeia/pull/980).
 
-The question of how to support RFP type proposals on Politeia has been the subject of discussion in this [issue](https://github.com/decred/politeia/issues/966) and in #Politeia. There will be a new RFP type proposal which candidate proposals can link to, voting and determining the options/outcome will be controlled through these RFP proposals. Before opening an RFP proposal, an ordinary proposal asking "should we have this RFP" would be submitted and approved - the 2 "RFP proposals" Politeia has seen thus far are of this type. The main point of discussion about the new RFP type proposals is around whether these should be conducted as multiple-choice proposals (where voters can vote for 1-of-N options and one with the most votes wins) or as parallel proposals where tickets can vote yes/no on each proposal and the winner is the one with the highest yes less no votes aggregate score (as the MM RFP is being conducted). Parallel voting on competing proposals seems to be the priority, with multiple-choice voting likely to come later and be used for a different purpose (more like polling). 
+The question of how to support RFP type proposals on Politeia has been the subject of discussion in this [issue](https://github.com/decred/politeia/issues/966) and in #politeia. There will be a new RFP type proposal which candidate proposals can link to, voting and determining the options/outcome will be controlled through these RFP proposals. Before opening an RFP proposal, an ordinary proposal asking "should we have this RFP" would be submitted and approved - the 2 "RFP proposals" Politeia has seen thus far are of this type. The main point of discussion about the new RFP type proposals is around whether these should be conducted as multiple-choice proposals (where voters can vote for 1-of-N options and one with the most votes wins) or as parallel proposals where tickets can vote yes/no on each proposal and the winner is the one with the highest yes less no votes aggregate score (as the MM RFP is being conducted). Parallel voting on competing proposals seems to be the priority, with multiple-choice voting likely to come later and be used for a different purpose (more like polling).
 
-
+Login by username was switched back to email to prevent [targeted locking](https://github.com/decred/politeia/issues/860#issuecomment-520871500) of accounts. [2FA](https://github.com/decred/politeia/issues/544) will solve this issue and allow logins without email.
 
 [dcrdex](https://github.com/decred/dcrdex): The dcrdex repository was created in July {not clear on this, earliest commits are July} to house the Dex [Specification](https://github.com/decred/dcrdex/tree/master/spec), and the first substantive PRs on the software are already [open](https://github.com/decred/dcrdex/pull/17). A [channel](https://matrix.to/#/!EzTSRQITaqHuFBDFhM:decred.org/$_2Wr5NR0S134vjG7iy3jdkMbm4dZ3uOXGQcYDGU9O-M?via=decred.org&via=matrix.org&via=zettaport.com) was also created for DEX Development chat on Matrix. 
 
