--- a/journal/201908.md
+++ b/journal/201908.md
@@ -69,7 +69,13 @@ tmux [test harness](https://github.com/decred/dcrstakepool/pull/476) has been ad
 
 [dcrlnd](https://github.com/decred/dcrlnd): {}
 
-New parameters [added](https://github.com/decred/lightning-faucet/pull/14) to the faucet, which will enable enable invoice generation and payment, among other features. The faucet can now [verify](https://github.com/decred/lightning-faucet/issues/15) the dcrlnd (keeps users accidentally  using the wrong network).
+{ looks like something was merged in Aug, what's the overview of changes? https://github.com/decred/dcrlnd/commits/master }
+
+More of upstream lnd work was [ported](https://github.com/decred/dcrlnd/pull/36#issuecomment-526721084) and is being tested before merging in dcrlnd. A total of 400+ PRs and 1700+ lines of code were adjusted. { keep or group with bigger report next month? }
+
+> to keep in sync we needed to adapt pretty much every single commit after our merge point on Jan 10 ([@matheusd](https://twitter.com/matheusd_tech/status/1169194706636615680))
+
+LN faucet gained a form to [pay invoices](https://github.com/decred/lightning-faucet/pull/8) and new config [parameters](https://github.com/decred/lightning-faucet/pull/14).
 
 [dcrandroid](https://github.com/decred/dcrandroid): {}
 
