--- a/journal/201908.md
+++ b/journal/201908.md
@@ -85,9 +85,7 @@ Work is being done to implement the [new UI](https://github.com/decred/dcrandroi
 
 Work is in progress on the improved UI and watch-only wallet support similar to the Android app.
 
-[dcrdata](https://github.com/decred/dcrdata): {}
-
-[Ticket splitting](https://github.com/matheusd/dcr-split-ticket-matcher): {}
+[dcrdata](https://github.com/decred/dcrdata): consume upgrades in dcrd, UI tweaks, optimizations and bug fixes.
 
 [docs](https://github.com/decred/dcrdocs): {}
 
