Dev/docs,site,stats

--- a/journal/201908.md
+++ b/journal/201908.md
@@ -87,44 +87,13 @@ Work is in progress on the improved UI and watch-only wallet support similar to 
 
 [dcrdata](https://github.com/decred/dcrdata): consume upgrades in dcrd, UI tweaks, optimizations and bug fixes.
 
-[docs](https://github.com/decred/dcrdocs): {}
+[docs](https://github.com/decred/dcrdocs): [Added](https://github.com/decred/dcrdocs/pull/968) new page detailing [atomic swaps](https://docs.decred.org/advanced/atomic-swap/), [updated](https://github.com/decred/dcrdocs/pull/979) [hardware wallet](https://docs.decred.org/wallets/hardware-wallets/) support info, minor cleanups.
 
-A new page detailing [atomic swaps](https://github.com/decred/dcrdocs/pull/968), [updated](https://github.com/decred/dcrdocs/pull/979) hardware wallet support info {SB: not sure this is DJ worthy}, minor cleanups. Work has started on a long asked for separate developer documentation site. Initial work is occurring in a personal repo that will be merged into the main Decred GitHub org when the site is launched. 
+Work has started on a long asked for separate [developer documentation](https://github.com/decredcommunity/issues/issues/135) site. Initial work is occurring in a personal repo that will be moved under the main Decred GitHub org when the site is launched.
 
-[decred.org](https://github.com/decred/dcrweb): {}
+[decred.org](https://github.com/decred/dcrweb): Roadmap has been [updated](https://github.com/decred/dcrweb/pull/695) with new developments, the [press coverage page](https://github.com/decred/dcrweb/pull/706) was updated with recent coverage, and privacy has been [added](https://github.com/decred/dcrweb/pull/712) to the homepage and roadmap. 
 
-Roadmap has been [updated](https://github.com/decred/dcrweb/pull/695) with new developments, the [press coverage page](https://github.com/decred/dcrweb/pull/706) was updated with recent coverage, and privacy has been [added](https://github.com/decred/dcrweb/pull/712) to the homepage and roadmap. 
-
-Closed: 
-
-Update apps.yml
-https://github.com/decred/dcrweb/pull/714
-Update download page for Exodus to one which shows both desktop/mobile wallets.
-
-Privacy update
-https://github.com/decred/dcrweb/pull/712
-Roadmap: Initial Privacy Release completed
-Roadmap: Decrediton and VSP privacy integration added
-Homepage news banner updated with privacy announcement
-
-Press coverage page update
-https://github.com/decred/dcrweb/pull/706
-Added a few recent links to coverage page.
-
-Added Evercoin to exchanges page
-https://github.com/decred/dcrweb/pull/704
-
-Roadmap Update August 2019 
-https://github.com/decred/dcrweb/pull/695
-	•	Add DEX Development
-	•	Move Block Header Commitments to in-progress
-	•	Move Android Wallet to completed
-	•	Move user created DAOs to new
-Other:
-
-* {smaller items go here}
-
-Dev activity stats for August: 244 active PRs, 274 master commits, 45750K added and 24002K deleted lines spread across 15 repositories. Contributions came from 2-9 developers per repository. ([chart]({chart link is optional, drop if not ready}))
+Dev activity stats for August: 244 active PRs, 274 master commits, 46K added and 24K deleted lines spread across 15 repositories. Contributions came from 2-9 developers per repository.
 
 ## People
 
