--- a/journal/201908.md
+++ b/journal/201908.md
@@ -27,7 +27,7 @@ The gradual process of upgrading Go modules continues with new versions of [`blo
 
 `gcs` module received multiple [improvements](https://github.com/decred/dcrd/pulls?q=is%3Apr+is%3Aclosed+merged%3A2019-08-01..2019-08-31+gcs) to bring it to the quality level required by consensus code for ultimate inclusion in [header commitments](https://proposals.decred.org/proposals/0a1ff846ec271184ea4e3a921a3ccd8d478f69948b984445ee1852f272d54c58). Support has been [added](https://github.com/decred/dcrd/pull/1854) for independent false positive rate and Golomb coding bin size. Among other things, this permits more optimal parameters for minimizing the filter size to be specified. This capability will be used in the upcoming version 2 filters that will ultimately be included in header commitments. Start of the v2 dev cycle also marked the start of a [new approach](https://github.com/decred/dcrd/pull/1843) towards handling module versioning between release cycles to reduce the maintenance burden.
 
-The Blake256 implementation has been [copied](https://github.com/decred/dcrd/pull/1811) into dcrd repository so that dcrd does not have that external dependency anymore. While the optimizations required by dcrd were [accepted](https://github.com/dchest/blake256/pull/3) upstream, it is still [desirable](https://github.com/decred/dcrd/issues/1810) to have consensus critical code under tight control of dcrd maintainers.
+The Blake256 implementation has been [copied](https://github.com/decred/dcrd/pull/1811) into dcrd repository so that dcrd does not have that external dependency anymore. While the optimizations required by dcrd were [accepted](https://github.com/dchest/blake256/pull/3) upstream, it is still desirable to have consensus critical code under tight control of dcrd maintainers to avoid situations mentioned [here](https://github.com/decred/dcrd/issues/1810).
 
 Test coverage was increased and hardened in multiple areas of the codebase.
 
@@ -39,9 +39,9 @@ Work [started](https://github.com/decred/dcrd/pull/1829) to maximize block templ
 
 A new [RPC](https://github.com/decred/dcrwallet/pull/1522) has been added that allows the user to abandon (or remove) an unconfirmed transaction from the wallet, and any other transactions dependent on its outputs. Another new RPC allows to export the [extended private key](https://github.com/decred/dcrwallet/pull/1533) of an account after unlocking the wallet.
 
-Code maintenance: upgraded to use the new modules in dcrd and [removed](https://github.com/decred/dcrwallet/pull/1531) usages of old modules, [improved](https://github.com/decred/dcrwallet/pull/1539) compatibility with Go 1.13 errors.
+Code maintenance: updated to use the new modules in dcrd and [removed](https://github.com/decred/dcrwallet/pull/1531) usages of old modules, [improved](https://github.com/decred/dcrwallet/pull/1539) compatibility with Go 1.13 errors.
 
-Work has begun to add [support](https://github.com/decred/dcrwallet/pull/1541) for creating CoinJoin transactions for purchasing split transactions in ticketbuying, as well as mixing of individual mix change outputs into smaller standard denominations.
+Work has begun to add [support](https://github.com/decred/dcrwallet/pull/1541) for creating CoinJoin transactions for purchasing split transactions in ticket buying, as well as mixing of individual mix change outputs into smaller standard denominations.
 
 [Decrediton](https://github.com/decred/decrediton): UI tweaks, bug fixes, code cleanup. 
 
@@ -55,9 +55,9 @@ The question of how to support RFP type proposals on Politeia has been the subje
 
 Login by username was switched back to email to prevent [targeted locking](https://github.com/decred/politeia/issues/860#issuecomment-520871500) of accounts. [2FA](https://github.com/decred/politeia/issues/544) will solve this issue and allow logins without email.
 
-[dcrdex](https://github.com/decred/dcrdex): The dcrdex repository was [announced](https://twitter.com/decredproject/status/1156652694502817793) in July to house the DEX [specification](https://github.com/decred/dcrdex/tree/master/spec), and the first substantive PRs on the software are already [open](https://github.com/decred/dcrdex/pull/17). A new [#dexdev](https://riot.im/app/#/room/!EzTSRQITaqHuFBDFhM:decred.org) room was also created for DEX Development chat on Matrix. 
+[dcrdex](https://github.com/decred/dcrdex): The dcrdex repository was [announced](https://twitter.com/decredproject/status/1156652694502817793) in July to house the DEX [specification](https://github.com/decred/dcrdex/tree/master/spec), and the first substantive PRs on the software are already [open](https://github.com/decred/dcrdex/pull/17). A new [#dexdev](https://riot.im/app/#/room/!EzTSRQITaqHuFBDFhM:decred.org) room was also created for DEX development chat on Matrix. 
 
-[dcrstakepool](https://github.com/decred/dcrstakepool): {}
+[dcrstakepool](https://github.com/decred/dcrstakepool):
 
 The large [effort](https://github.com/decred/dcrstakepool/pulls?q=is%3Apr+is%3Aclosed+227) to [decouple](https://github.com/decred/dcrstakepool/issues/227) dcrstakepool from dcrwallet started in April has finally come to [completion](https://github.com/decred/dcrstakepool/pull/470). This change decreases code complexity and reduces the quantity of RPC calls over the network, which in turn enhances performance and increases security.
 
@@ -67,7 +67,7 @@ tmux [test harness](https://github.com/decred/dcrstakepool/pull/476) has been ad
 
 [30 PRs](https://github.com/decred/dcrstakepool/pulls?q=is%3Apr+is%3Aclosed+merged%3A2019-08-01..2019-08-31) were merged in total.
 
-[dcrlnd](https://github.com/decred/dcrlnd): {}
+[dcrlnd](https://github.com/decred/dcrlnd):
 
 { looks like something was merged in Aug, what's the overview of changes? https://github.com/decred/dcrlnd/commits/master }
 
@@ -77,13 +77,9 @@ More of upstream lnd work was [ported](https://github.com/decred/dcrlnd/pull/36#
 
 LN faucet gained a form to [pay invoices](https://github.com/decred/lightning-faucet/pull/8) and new config [parameters](https://github.com/decred/lightning-faucet/pull/14).
 
-[dcrandroid](https://github.com/decred/dcrandroid): {}
+[dcrandroid](https://github.com/decred/dcrandroid): Work is being done to implement the [new UI](https://github.com/decred/dcrandroid/pull/400) which will bring the app into alignment with the standard app design recommendations for Android. Work on the backend is also ongoing for [multi-wallet](https://github.com/decred/dcrandroid/issues/188) support which will enable [read only](https://github.com/decred/dcrandroid/issues/393) wallets for ticket monitoring.
 
-Work is being done to implement the [new UI](https://github.com/decred/dcrandroid/pull/400) which will bring the app into alignment with the standard app design recommendations for Android. Work on the backend is also ongoing for [multi-wallet](https://github.com/decred/dcrandroid/issues/188) support which will enable [read only](https://github.com/decred/dcrandroid/issues/393) wallets for ticket monitoring.
-
-[dcrios](https://github.com/raedahgroup/dcrios): {}
-
-Work is in progress on the improved UI and watch-only wallet support similar to the Android app.
+[dcrios](https://github.com/raedahgroup/dcrios): Work is in progress on the improved UI and watch-only wallet support similar to the Android app.
 
 [dcrdata](https://github.com/decred/dcrdata): consume upgrades in dcrd, UI tweaks, optimizations and bug fixes.
 
