--- a/journal/201908.md
+++ b/journal/201908.md
@@ -93,12 +93,7 @@ Dev activity stats for August: 244 active PRs, 274 master commits, 46K added and
 
 ## People
 
-Welcome to new first time contributors with code merged to master: aarcamp ([dcrd](https://github.com/decred/dcrd/commits?author=aarcamp)), skipcheru ([dcrandroid](https://github.com/decred/dcrandroid/commits?author=skipcheru)), RyanBRiley ([politeia](https://github.com/decred/politeia/commits?author=RyanBRiley)), UferePease ([dcrstakepool](https://github.com/decred/dcrstakepool/commits?author=UferePease)), fguisso ([lightning-faucet](https://github.com/decred/lightning-faucet/commits?author=fguisso))
-
-
-{updates from existing contractors}
-
-{interviews about people}
+Welcome to new first time contributors with code merged to master: aarcamp ([dcrd](https://github.com/decred/dcrd/commits?author=aarcamp)), skipcheru ([dcrandroid](https://github.com/decred/dcrandroid/commits?author=skipcheru)), RyanBRiley ([politeia](https://github.com/decred/politeia/commits?author=RyanBRiley)), UferePease ([dcrstakepool](https://github.com/decred/dcrstakepool/commits?author=UferePease)), fguisso ([lightning-faucet](https://github.com/decred/lightning-faucet/commits?author=fguisso)).
 
 Community stats:
 
@@ -114,7 +109,7 @@ Community stats:
 * LinkedIn followers: 603 (+12)
 * GitHub dcrd stars: 516 (+18), forks: 1,383 (+18)
 
-Following the events in Ho Chi Minh City, Vietnamese Telegram, Twitter and Facebook accounts have been created. Full list of Decred social media groups [here]({wiki social media}). {is it ok/fair to highlight certain local communities like this? rr: yes I think that's fine, good to highlights communities where significant things happened in the month}
+Following the [events](https://github.com/decredcommunity/events/blob/master/reports/20190725-cointime-summit-ho-chi-minh-city-vietnam.md) in Ho Chi Minh City, Vietnamese [Telegram](https://t.me/decredvietnam), [Twitter](https://twitter.com/DecredVietnam) and [Facebook](https://www.facebook.com/Decred-DCR-Vietnam-108991833777572/) accounts have been created. A list of all Decred social media groups is [here](https://github.com/decredcommunity/wiki/blob/master/wiki/social-media.md).
 
 ## Governance
 
